--- a/.github/workflows/hello-world-docker-ci.yml
+++ b/.github/workflows/hello-world-docker-ci.yml
@@ -14,7 +14,8 @@ jobs:
 
       - name: Run my own container action
         id: hello-action
-        uses: ./hello-world-docker-action
+        #uses: ./hello-world-docker-action
+        uses: anotherRedbeard/hello-world-docker-action@v1
         with:
           who-to-greet: '@anotherRedbeard'
 
